[metadata]
name = pylibrm
version = 0.0.2
author = Alan Huang
author_email = alanhuang@rmaxis.com
description = Python lib for RobustMotion axis
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.6
install_requires =
    pymodbus==2.5.3